// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 cvPqli"
    type="button"
  />
</div>
`;

exports[`Button should render a large one 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 hRozzh"
    type="button"
  />
</div>
`;

exports[`Button should render a small one 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 bXdKPp"
    type="button"
  />
</div>
`;

exports[`Button should render an icon 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 iYzeZJ"
    type="button"
  />
</div>
`;

exports[`Button should render as danger button 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 hsWmPR"
    type="button"
  />
</div>
`;

exports[`Button should render as primary button 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 cvPqli"
    type="button"
  />
</div>
`;

exports[`Button should render as secondary button 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 khjEGA"
    type="button"
  />
</div>
`;

exports[`Button should render as transparent button 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 ebSMkz"
    type="button"
  />
</div>
`;

exports[`Button should render if disabled 1`] = `
<DocumentFragment>
  <button
    class="Button-mdtvtf-0 eVVyXU"
    disabled=""
    type="button"
  >
    Click
  </button>
</DocumentFragment>
`;
